Three signatures per line. Fix line break on long names

--- a/public/media/css/styles.css
+++ b/public/media/css/styles.css
@@ -168,11 +168,11 @@ ul#members {
 	list-style-type: none;
 	margin: 0 0 20px 0;
 	padding: 0;
-	font-size: .8em;
+	font-size: .76em;
 }
 
 ul#members li {
-	width: 190px;
+	width: 252px;
 	line-height: 2em;
 	text-align: center;
 	float: left;
